crates/aiken-lang/src/tests/snapshots/fail_expr.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n  fail some_var\n}\n"
---
fn foo() {
  fail some_var
}

